Remove Adobe Flash components

--- a/index.html
+++ b/index.html
@@ -1,1 +1,334 @@
-Hello World
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Добрый самолет - радиошоу на 103 FM</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<!--
+Сайт для парсинга swf-файлов
+https://flashplayer.fullstacks.net/-->
+
+<div class="container">
+    <div class="header">
+        <div>
+            <img style="width: 136px;" src="images/donkey.png" alt="">
+        </div>
+        <div>
+            <img class="greeting" src="nikhello.jpg">
+
+            <h4 class="main-header">Вы все еще грустите? <br>
+                Тогда, не медля, Экорадио включите<br>
+                И с Добрым самолетом к смеху полетите!</h4>
+        </div>
+        <div>
+            <img style="width: 133px;" src="images/bird.png" alt="">
+        </div>
+    </div>
+    <div class="hr"></div>
+    <div class="menu-panel">
+        <div class="menu-panel-item">
+            <a href="https://www.ekoradio.ru/" target="_blank">На сайт Экорадио</a>
+        </div>
+        <div class="to-right menu-panel-item">
+            <a href="about.html">О Добром Самолете</a>
+        </div>
+    </div>
+    <div class="hr"></div>
+
+    <div class="columns">
+        <div class="left-column">
+            <div class="section-header">
+                Взлетная полоса № 1
+            </div>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="audio-1/Nik-03-04-06-NotForMoney.mp3">Что бы не сделали за деньги</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-04-04-06-Hobby.mp3">О вашем хобби</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-24-04-06-IdealDay.mp3">Идеальный день</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-06-04-06-WhereWouldYouGo.mp3">Куда бы поехали</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-12-04-06-UFO.mp3">Встреча с НЛО</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-13-04-06-ToTheStars.mp3">Полетели бы к звездам?</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-14-04-06-Screwdriver.mp3">Чудо-отвертка</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-15-03-06-Cartoons.mp3">О мультфильмах</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-17-04-06-UnusualHabits.mp3">Необычные привычки</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-19-04-06-GiftForMarriage.mp3">Подарок на свадьбу</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-1/Nik-19-05-06-BeeHouse.mp3">Пчелиный улий</a>
+                </li>
+            </ul>
+
+            <div class="section-header">
+                Взлетная полоса № 2
+            </div>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="audio-2/Nik-04-02-05-PrivetUchitelyam.mp3">Привет учителям</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-09-06-05-ChtoVamNuzhno.mp3">Что вам нужно</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-10-12-04-PoklonUchitelyam.mp3">Поклон учителям</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-14-06-05-OPrazdnikah.mp3">О праздниках</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-16-01-05-OPodarkahNaNoviyGod.mp3">О подарках на Новый год</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-16-06-05-KakimZhivotnimVyBiStali.mp3">Каким животным бы стали</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-18-04-05-ChtoBudetDalshe.mp3">Что будет дальше</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-19-05-05-VeriteLiVyVGadaniya.mp3">Верите ли вы в гадания</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-23-03-05-ChtoByVyProreklamirovali.mp3">Что бы вы прорекламировали</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-29-02-05-ONeobdumanyhPostupkah.mp3">О необдуманных поступках</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-2/Nik-29-08-05-VKogoByVyPrevratilis.mp3">В кого бы вы превратились</a>
+                </li>
+            </ul>
+
+            <div class="section-header">
+                Взлетная полоса № 3
+            </div>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="audio-3/Nik-01-11-05-ZloiLiVyChelovek.mp3">Злой ли вы человек</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-07-10-05-Kompas.mp3">Компас - что это</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-08-09-05-ChtoByVyNeStaliDelat.mp3">Что бы вы не стали делать</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-10-10-05-ChtoByVyPodarili.mp3">Что бы вы подарили</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-18-10-05-ChtoVamNuzhno2.mp3">Что вам нужно-2</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-19-10-05-KakVyOdevaetes.mp3">Как вы одеваетесь</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-20-09-05-KakLudiNahodyatDrugDruga.mp3">Как находят друг друга</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-21-10-05-ObiegoriliNaVolebole.mp3">Объегорили на волейболе</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-23-09-05-OMaria.mp3">О, милая Мария!</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-27-10-05-VKakomFilmeBySnyalis.mp3">В каком фильме бы снялись</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-3/Nik-28-10-05-MatematicheskyiUmor.mp3">Математический юмор</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="center-column">
+            <h2 class="welcome-header">
+                Добро пожаловать на смеходром <br>
+                "Доброго самолета"!
+            </h2>
+            <blockquote>
+                <p class="style11">
+                    Здесь вы сможете загрузить записи разговоров Никиты, одного из постоянных слушателей этого утреннего радиошоу, идущего
+                    (а теперь уже шедшего)
+                    в городе Нижний Тагил
+                    на частоте 103 FM
+                    каждый будний день.<br>
+
+                </p>
+
+                <p class="style11">
+                    Загрузите одну запись, чтобы понять, нужны ли вам все остальные...
+                </p>
+                <p class="style7 style13">
+          <span class="style13 style10 style14">
+          Но будьте осторожны!
+При прослушивании воображение лучше отключить.
+          </span>
+                <p class="style7 style9">* * * </p>
+                <p class="style7 style9">Считаю своим долгом сказать огромное спасибо посетителям сего сайта...</p>
+                <p class="style7 style9"> &quot;Спасибо, уважаемые, неземное вам спасибо! Именно вы сподвигли меня
+                    сделать декабрьское обновление!&quot;</p>
+                <p class="style7 style9">* * *</p>
+                <p class="style7 style9">И не стесняйтесь оставлять свое мнение об этом сайте в гостевой
+                    книжечке...</p>
+            </blockquote>
+        </div>
+
+        <div class="right-column">
+            <div class="section-header">
+                Взлетная полоса № 4
+            </div>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="audio-4/Nik-01-12-05-VasheLubimoeImya.mp3">Ваше любимое имя</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-07-12-05-MagicheskieSposobnosti.mp3">О магических способностях</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-08-11-05-VoChtoVyVerite.mp3">Во что вы верите</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-12-12-05-KogoVozmeteNaOstrov.mp3">Кого возьмете на остров</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-14-11-05-KakVyBoritesSPonedelnikom.mp3">Как вы боретесь с ПН</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-16-12-05-RazbiliMashinu.mp3">Они разбили машину</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-20-12-05-KakoiTipLudeiVasBesit.mp3">Какой тип людей бесит</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-22-11-05-KakByViSebyaRazvlekli.mp3">Как бы себя развлекли</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-22-12-05-ChtoNeNadoNaNoviyGod.mp3">Что не нужно на Новый год</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-24-11-05-OPodarkeNaDenRozhdenya.mp3">О подарке на день рождения</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-4/Nik-25-11-05-OrangevieMalutki.mp3">Оранжевые малютки</a>
+                </li>
+            </ul>
+
+            <div class="section-header">
+                Взлетная полоса № 5
+            </div>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="audio-5/Alex-02-05-06-KakProveliPrazdniki.mp3">Как провели праздники</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-11-05-06-VashiPravila.mp3">Ваши правила</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-12-05-06-ChernyeDiri.mp3">Черные дыры</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-17-05-06-OMesti.mp3">О мести</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-18-05-06-Logika.mp3">Женская, мужская логика</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-22-05-06-LegkoLiBitZhenshinoi.mp3">Легко ли быть женщиной</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-26-04-06-OPohudenii.mp3">О похудении</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-28-04-06-Flashka.mp3">О, моя флешенька!</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-30-03-06-OVneshnosti.mp3">О внешности</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-26-05-06-SekretnyiKod.mp3">Секретный код</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-02-06-06-Elf.mp3">Спасибо, эльф Дмитрий!</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-25-05-06-NaChtoGotoviRadiLubvi.mp3">На что готовы ради любви</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-5/Alex-23-05-06-Lubovniki.mp3">Зачем нужен любовник</a>
+                </li>
+            </ul>
+
+            <div class="section-header">
+                Взлетная полоса № 6
+            </div>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="audio-6/Alex-05-06-06-SKemVOtpusk.mp3">С кем поедете в отпуск</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Alex-07-06-06-ChemViSebyaRaduete.mp3">Чем вы себя радуете</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Alex-09-06-06-YaSmenilPostavshika.mp3">Я сменил поставщика!</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Alex-14-06-06-OZamenitostyah.mp3">О знаменитостях</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Alex-15-06-06-Pamyatnik.mp3">О памятниках</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Alex-16-06-06-NedelyaObvalov.mp3">Неделя обвалов и обломов</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Alex-25-08-06-Samovirazhenie.mp3">Как самовыражаетесь</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Olga-04-07-06-KachestvaMZ.mp3">Золотые качества М и Ж</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Olga-19-06-06-ODomashnihZhivotnih.mp3">О домашних животных</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Olga-20-06-06-ZolotayaRibka.mp3">Золотая рыбка</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Olga-21-06-06-ODetstve.mp3">О детстве</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Olga-27-06-06-VoChtoViVerite.mp3">Во что вы верите</a>
+                </li>
+                <li class="menu-item">
+                    <a href="audio-6/Olga-29-06-06-ChtoDelaetVasSchastlivim.mp3">Что вас делает счастливым</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="hr"></div>
+    <div class="footer">
+        &copy; 2006 - 2022 Nik's corp.
+    </div>
+</div>
+</body>
+</html>
